--- a/lab-01-hello-r.Rmd
+++ b/lab-01-hello-r.Rmd
@@ -4,8 +4,9 @@ author: "Insert your name here"
 date: "Insert date here"
 output: 
   html_document: 
-    fig_height: 4
-    fig_width: 9
+    fig_height: 3
+    fig_width: 6
+    theme: cosmo
 ---
 
 ## Load packages and data
@@ -58,17 +59,34 @@ The correlation coefficients for the dino and star data sets are practically the
 Add your code and narrative to complete this exercise. Use the conventions from the previous exercises to name your chunks and organize your work.
 
 ```{r}
-
+circle_data <- datasaurus_dozen %>%
+  filter(dataset == "circle")
 ```
 
 ```{r}
-
+circle_data %>%
+  summarize(r = cor(x, y))
 ```
+The relationship between the x and y variables is very weak and negative, as shown by an r value of -0.07.
 
 ### Exercise 5
 
 This is your final exercise! Add code and narrative as needed. Be creative and show off what you’ve learned so far.
 Add code and narrative as needed.
+
+```{r}
+ggplot(datasaurus_dozen, aes(x = x, y = y, color = dataset)) +
+  geom_point() +
+  facet_wrap(~dataset, ncol = 3) +
+  theme(legend.position = "none")
+```
+```{r}
+datasaurus_dozen %>%
+  group_by(dataset) %>%
+  summarize(r = cor(x, y)) %>%
+  print(13)
+```
+
 
 To add additional R chunks, you can either type the backticks, curly braces, and the letter `r`, or use the "Insert Chunk" button above (the green C+ icon). Have fun!
 
