--- a/lab-01-hello-r.Rmd
+++ b/lab-01-hello-r.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Lab 01 - Hello R"
 author: "Insert your name here"
-date: "Insert date here"
+date: "Jan 22"
 output: 
   html_document: 
     fig_height: 3
